WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236288
GPUP WebGL RELEASE_LOGs errorneously for unhandled messages
https://bugs.webkit.org/show_bug.cgi?id=236288
Summary
GPUP WebGL RELEASE_LOGs errorneously for unhandled messages
Kimmo Kinnunen
Reported
2022-02-08 00:39:21 PST
GPUP WebGL RELEASE_LOGs errorneously for unhandled messages
Attachments
Patch
(5.05 KB, patch)
2022-02-08 00:43 PST
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Patch for landing
(5.02 KB, patch)
2022-02-08 01:04 PST
,
Kimmo Kinnunen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kimmo Kinnunen
Comment 1
2022-02-08 00:43:05 PST
Created
attachment 451215
[details]
Patch
Antti Koivisto
Comment 2
2022-02-08 00:45:48 PST
Comment on
attachment 451215
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=451215&action=review
> Source/WebKit/ChangeLog:13 > + Move the pretended message handling to RemoteGraphicsContextGLProxy static method,
pretended?
> Source/WebKit/ChangeLog:14 > + so that the RELEASE_LOG does not get added errorneosly again.
erroneously
Kimmo Kinnunen
Comment 3
2022-02-08 01:04:00 PST
Created
attachment 451218
[details]
Patch for landing
EWS
Comment 4
2022-02-08 06:21:01 PST
Committed
r289371
(
246959@main
): <
https://commits.webkit.org/246959@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 451218
[details]
.
Radar WebKit Bug Importer
Comment 5
2022-02-08 06:22:19 PST
<
rdar://problem/88626200
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug